--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://tse4.mm.bing.net/th/id/OIP.OxlwsZx5AFLzhKJyKqw8hQHaHa?pid=Api&P=0&h=180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rtdt_frontend</title>
+    <title>FastTrack</title>
   </head>
   <body>
     <div id="root"></div>
